[package]
name = "sample-yew-app"
version = "0.1.0"
authors = ["Kristoffer Andersson <kod.kristoff@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ['cdylib', 'rlib']

[dependencies]
yew = "*"
wasm-bindgen = "*"
